Assert DesktopPWAWindowing is enabled in GetInstalledPwaForUrl

Bug: 825095
Change-Id: I45d7af704636189a4a94a8c125c66092c5192e96
Reviewed-on: https://chromium-review.googlesource.com/977347
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Ben Wells <benwells@chromium.org>
Reviewed-by: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546005}
Former-commit-id: d28bdd019bb65c267d3c5b814324227b4cf48dd4